almost-done app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="./style.css" rel="stylesheet"/>
 </head>
-<body>
+<body class = "weather-app">
     <div class = "titles">
         <h1 id = "top-title">
             WeatherView
@@ -16,21 +16,25 @@
             An unoffical weather forecast website for all cities.
         </div>
     </div>
-    <div class="weather-info">
-        <div id="precipitation">
-            Percipitaion: <span>0</span>
+    <div class = "weather-info">
+        <h1>N/A</h1>
+        <div class="Temperture item">
+            Temperature: <span>N/A</span>
         </div>
-        <div id="humidity">
-            Humidity: <span>0</span>
+        <div class="humidity item">
+            Humidity: <span>N/A</span>
         </div>
-        <div id="wind-degree">
-            Wind-degree: <span>0</span>
+        <div class="wind-speed item">
+            Wind-speed: <span>N/A</span>
         </div>
-        <div id="wind-gust">
-            Wind-gust: <span>0</span>
+        <div class="wind-degree item">
+            Wind-degree: <span>N/A</span>
         </div>
-        <div id="wind-sped">
-            Wind-speed: <span>0</span>
+        <div class="wind-gust item">
+            Wind-gust: <span>N/A</span>
+        </div>
+        <div class="coordinate item">
+            Longitude: <span>N/A</span>  Latitude: <span>N/A</span>
         </div>
     </div>
     <form id="city-form">
