--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="./style.css" rel="stylesheet"/>
 </head>
 <body class = "weather-app">
+    <!-- <img id="image-top" src = "https://media.istockphoto.com/photos/weather-forecast-concept-picture-id531889697?k=20&m=531889697&s=170667a&w=0&h=DH9uBMxKt4WIjLA__q4cPFt21A4Wlc4kDdFSK5a7D7g=" alt = "Not loading, sorry." height = "200" width = "100%"> -->
     <div class = "titles">
         <h1 id = "top-title">
             WeatherView
@@ -41,7 +42,9 @@
         <input type="text" id="city-input" placeholder="Enter City Name"/>
         <button id="submit">Submit City Name</button>
     </form>
+    
 </body>
 <script src="./scripts.js"></script>
 </html>
+
 
